--- a/assets/scss/atoms/animations.scss
+++ b/assets/scss/atoms/animations.scss
@@ -1,34 +1,21 @@
-.wow {
-	animation-duration: 2s;
-	will-change: transform opacity;
+.fill-title > * {
+	background: linear-gradient(
+		to right,
+		$black 50%,
+		$gray-lightest 50%
+	);
+	background-size: 200% 100%;
+	background-position-x: 100%;
+	color: transparent;
+	background-clip: text;
+	-webkit-background-clip: text;
 }
 
-@keyframes foglayer_01_opacity {
-	0% { opacity: .1; }
-	22% { opacity: .5; }
-	40% { opacity: .28; }
-	58% { opacity: .4; }
-	80% { opacity: .16; }
-	100% { opacity: .1; }
+.reveal-text {
+	position: relative;
+	overflow: hidden;
 }
 
-@keyframes foglayer_02_opacity {
-	0% { opacity: .5; }
-	25% { opacity: .2; }
-	50% { opacity: .1; }
-	80% { opacity: .3; }
-	100% { opacity: .5; }
-}
-
-@keyframes foglayer_03_opacity {
-	0% { opacity: .8; }
-	27% { opacity: .2; }
-	52% { opacity: .6; }
-	68% { opacity: .3; }
-	100% { opacity: .8; }
-}
-
-@keyframes foglayer_moveme {
-	0% { left: 0; }
-	100% { left: -100%; }
+.split-line {
+	overflow: hidden;
 }
