--- a/assets/scss/atoms/breakpoints.scss
+++ b/assets/scss/atoms/breakpoints.scss
@@ -4,14 +4,14 @@ body {
 		display: block;
 		position: fixed;
 		bottom: 0;
-		left: 0;
-		margin: 20px;
-		padding: 10px;
-		font-size: 14px;
+		right: 0;
+		margin: 3px;
+		padding: 3px 7px;
+		font-size: 12px;
 		color: white;
 		background: black;
 		z-index: 99999999999;
-		opacity: .5;
+		opacity: .175;
 		font-family: sans-serif;
 		pointer-events: none;
 
