--- a/assets/scss/atoms/scroll.scss
+++ b/assets/scss/atoms/scroll.scss
@@ -1,16 +1,11 @@
+body::-webkit-scrollbar {
+    display: none;
+}
+ 
+body {
+    -ms-overflow-style: none;
+}
+ 
 html {
-	&::-webkit-scrollbar {
-		width: 5px;
-		height: 5px;
-	}
-
-	&::-webkit-scrollbar-track {
-		background-color: $almost-white;
-		border-radius: 10px;
-	}
-
-	&::-webkit-scrollbar-thumb {
-		background: $gray-lighter;
-		border-radius: 10px;
-	}
+    scrollbar-width: none;
 }
