--- a/assets/scss/atoms/variables.scss
+++ b/assets/scss/atoms/variables.scss
@@ -21,19 +21,21 @@ $noto-sans:             'Noto Sans', sans-serif;
 // weights
 $light: 				300;
 $regular: 				400;
-$semi-bold: 			500;
 $bold: 					700;
 
 // colors
-$white:					#fff;
-$almost-white:			#f5f5f5;
-$gray-lightest:			#e2e2e2;
+$pure-white:		    #fff;
+$white:			        #f8f8f8;
+$gray-lightest:			#eee;
 $gray-lighter:			#bbb;
 $gray-light:			#999;
 $gray-medium:			#666;
 $gray-dark:				#333;
 $gray-darker:			#222;
 $gray-darkest:			#111;
-$black:					#000;
+$black:					#0d0e13;
+$pure-black:			#000;
 
 $red:                   #ff3838;
+$green:                 rgba(210, 230, 130);
+$blue:                  rgb(30, 0, 140);
