--- a/assets/scss/atoms/variables.scss
+++ b/assets/scss/atoms/variables.scss
@@ -1,19 +1,19 @@
 // breakpoints
-$mq-xs-min: "only screen and (min-width: 421px)";
-$mq-sm-min: "only screen and (min-width: 576px)";
-$mq-md-min: "only screen and (min-width: 768px)";
-$mq-lg-min: "only screen and (min-width: 993px)";
-$mq-xl-min: "only screen and (min-width: 1201px)";
-$mq-2xl-min: "only screen and (min-width: 1601px)";
+$mq-xs-min:             'only screen and (min-width: 421px)';
+$mq-sm-min:             'only screen and (min-width: 576px)';
+$mq-md-min:             'only screen and (min-width: 768px)';
+$mq-lg-min:             'only screen and (min-width: 993px)';
+$mq-xl-min:             'only screen and (min-width: 1201px)';
+$mq-2xl-min:            'only screen and (min-width: 1601px)';
 
-$mq-xs-max: "only screen and (max-width: 420px)";
-$mq-sm-max: "only screen and (max-width: 575px)";
-$mq-md-max: "only screen and (max-width: 767px)";
-$mq-lg-max: "only screen and (max-width: 992px)";
-$mq-xl-max: "only screen and (max-width: 1200px)";
-$mq-2xl-max: "only screen and (max-width: 1600px)";
+$mq-xs-max:             'only screen and (max-width: 420px)';
+$mq-sm-max:             'only screen and (max-width: 575px)';
+$mq-md-max:             'only screen and (max-width: 767px)';
+$mq-lg-max:             'only screen and (max-width: 992px)';
+$mq-xl-max:             'only screen and (max-width: 1200px)';
+$mq-2xl-max:            'only screen and (max-width: 1600px)';
 
-$mq-landscape: "screen and (orientation:landscape)";
+$mq-landscape:          'screen and (orientation:landscape)';
 
 // fonts
 $noto-sans:             'Noto Sans', sans-serif;
