--- a/assets/scss/atoms/variables.scss
+++ b/assets/scss/atoms/variables.scss
@@ -26,7 +26,7 @@ $bold: 					700;
 // colors
 $pure-white:		    #fff;
 $white:			        #f8f8f8;
-$gray-lightest:			#eee;
+$gray-lightest:			rgb(240, 240, 240);
 $gray-lighter:			#bbb;
 $gray-light:			#999;
 $gray-medium:			#666;
