--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -17,11 +17,185 @@
         }
 
         #team {
-
+            height: 100vh;
         }
 
         #testimonials {
-            height: 100vh;
+            border-top-left-radius: 1rem;
+            border-top-right-radius: 1rem;
+            background-color: $gray-lightest;
+            margin-bottom: clamp(2rem, 10vw, 10rem);
+            
+            @media #{$mq-sm-min} {
+                border-radius: 0;
+                background-color: transparent;
+            }
+
+            .gray-box {
+                display: block;
+                padding: 3rem 1rem;
+
+                @media #{$mq-sm-min} {
+                    position: relative;
+                    overflow: hidden;
+                    border-top-left-radius: clamp(1rem , 2vw, 2rem);
+                    border-bottom-left-radius: clamp(1rem , 2vw, 2rem);
+                    background-color: $gray-lightest;
+                    padding: 4rem 4rem 3rem 4rem;
+                    margin-bottom: 2rem;
+                }
+
+                .top {
+                    margin-bottom: clamp(2rem, 3vw, 3rem);
+
+                    @media #{$mq-sm-min} {
+                        display: flex;
+                        align-items: flex-end;
+                        justify-content: space-between;
+                    }
+
+                    h2 {
+                        text-transform: lowercase;
+                    }
+
+                    .testimonials-nav {
+                        display: flex;
+                        align-items: center;
+                        gap: .375rem;
+                        margin-top: 1.25rem;
+                        margin-left: -.25rem;
+
+                        @media #{$mq-sm-min} {
+                            justify-content: flex-end;
+                            gap: .5rem;
+                            margin: 0;
+                        }
+
+                        .button {
+                            display: block;
+                            width: 2.5rem;
+                            height: 2.5rem;
+                            border-radius: 50%;
+                            background-color: $green;
+                            color: $white;
+                            transition: .3s ease-in-out;
+                            cursor: pointer;
+                            position: relative;
+                            overflow: hidden;
+
+                            @media #{$mq-sm-min} {
+                                width: 3rem;
+                                height: 3rem;
+                            }
+
+                            &:hover {
+                                background-color: darken($green, 20);
+                            }
+
+                            &.prev {
+                                &:hover {
+                                    svg {
+                                        &:first-child {
+                                            transform: translate(-500%, -50%);
+                                        }
+
+                                        &:last-child {
+                                            transform: translate(-50%, -50%);
+                                        }
+                                    }
+                                }
+
+                                svg {
+                                    &:last-child {
+                                        transform: translate(500%, -50%);
+                                    }
+                                }
+                            }
+
+                            &.next {
+                                &:hover {
+                                    svg {
+                                        &:first-child {
+                                            transform: translate(500%, -50%);
+                                        }
+
+                                        &:last-child {
+                                            transform: translate(-50%, -50%);
+                                        }
+                                    }
+                                }
+
+                                svg {
+                                    &:last-child {
+                                        transform: translate(-500%, -50%);
+                                    }
+                                }
+                            }
+
+                            &.swiper-button-disabled {
+                                cursor: auto;
+                                pointer-events: none;
+                                filter: grayscale(1);
+                                opacity: .5;
+                            }
+
+                            svg {
+                                position: absolute;
+                                top: 50%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                                transition: .5s ease-in-out;
+                                width: 1rem;
+                                height: 1rem;
+
+                                @media #{$mq-sm-min} {
+                                    width: 1.125rem;
+                                    height: 1.125rem;
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .testimonials-slider {
+                    cursor: grab;
+
+                    &.is-dragging {
+                        cursor: grabbing;
+
+                        .box {
+                            transform: scale(.9);
+                            
+                        }
+                    }
+
+                    .box {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1.5rem;
+                        background-color: $white;
+                        border-radius: .625rem;
+                        padding: 2rem 2.5rem;
+                        transition: .6s ease-in-out;
+
+                        .text {
+                            
+                        }
+
+                        .bottom {
+                            color: $blue;
+
+                            .name {
+
+                            }
+
+                            .position {
+                                text-transform: lowercase;
+                            }
+                        }
+                    }
+                }
+            }
         }
 
         #contact {
@@ -30,6 +204,11 @@
             .left {
                 @media #{$mq-lg-min} {
                     padding-right: 3rem;
+                }
+
+                @media #{$mq-sm-max} {
+                    padding-left: calc(15px + 1rem);
+                    padding-right: calc(15px + 1rem);
                 }
 
                 h2 {
