--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -13,11 +13,208 @@
         }
 
         #services {
-
+            height: 100vh;
         }
 
         #team {
-            height: 100vh;
+            margin-bottom: clamp(2rem, 10vw, 10rem);
+
+            .top {
+                margin-bottom: clamp(2rem, 3vw, 3rem);
+
+                @media #{$mq-sm-min} {
+                    display: flex;
+                    align-items: flex-end;
+                    justify-content: space-between;
+                }
+
+                @media #{$mq-sm-max} {
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+
+                .left {
+                    @media #{$mq-sm-min} {
+                        width: 75%;
+                    }
+
+                    @media #{$mq-xl-min} {
+                        width: 50%;
+                    }
+
+                    h2 {
+                        text-transform: lowercase;
+                        margin-bottom: clamp(1rem, 2vw, 2rem);
+                    }
+
+                    .desc {
+                        
+                    }
+                }
+
+                .team-nav {
+                    display: flex;
+                    align-items: center;
+                    gap: .375rem;
+                    margin-top: 1.25rem;
+                    margin-left: -.25rem;
+
+                    @media #{$mq-sm-min} {
+                        justify-content: flex-end;
+                        gap: .5rem;
+                        margin: 0;
+                    }
+
+                    .button {
+                        display: block;
+                        width: 2.5rem;
+                        height: 2.5rem;
+                        border-radius: 50%;
+                        background-color: $green;
+                        color: $white;
+                        transition: .3s ease-in-out;
+                        cursor: pointer;
+                        position: relative;
+                        overflow: hidden;
+
+                        @media #{$mq-sm-min} {
+                            width: 3rem;
+                            height: 3rem;
+                        }
+
+                        &:hover {
+                            background-color: darken($green, 20);
+                        }
+
+                        &.prev {
+                            &:hover {
+                                svg {
+                                    &:first-child {
+                                        transform: translate(-500%, -50%);
+                                    }
+
+                                    &:last-child {
+                                        transform: translate(-50%, -50%);
+                                    }
+                                }
+                            }
+
+                            svg {
+                                &:last-child {
+                                    transform: translate(500%, -50%);
+                                }
+                            }
+                        }
+
+                        &.next {
+                            &:hover {
+                                svg {
+                                    &:first-child {
+                                        transform: translate(500%, -50%);
+                                    }
+
+                                    &:last-child {
+                                        transform: translate(-50%, -50%);
+                                    }
+                                }
+                            }
+
+                            svg {
+                                &:last-child {
+                                    transform: translate(-500%, -50%);
+                                }
+                            }
+                        }
+
+                        &.swiper-button-disabled {
+                            cursor: auto;
+                            pointer-events: none;
+                            filter: grayscale(1);
+                            opacity: .5;
+                        }
+
+                        svg {
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            transition: .5s ease-in-out;
+                            width: 1rem;
+                            height: 1rem;
+
+                            @media #{$mq-sm-min} {
+                                width: 1.125rem;
+                                height: 1.125rem;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .team-slider {
+                cursor: grab;
+
+                @media #{$mq-sm-max} {
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+
+                &.is-dragging {
+                    cursor: grabbing;
+
+                    .box {
+                        transform: scale(.9);
+                    }
+                }
+
+                .box {
+                    position: relative;
+                    overflow: hidden;
+                    border-radius: clamp(.625rem, 1.5vw, 1.5rem);
+                    width: 100%;
+                    height: 60vh;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-end;
+                    align-items: center;
+                    transition: .6s ease-in-out;
+                    padding: 2rem 1.5rem;
+                    color: $white;
+                    text-align: center;
+                    gap: .5rem;
+
+                    @media #{$mq-lg-min} {
+                        height: 70vh;
+                    }
+
+                    &:before {
+                        content: '';
+                        position: absolute;
+                        z-index: 1;
+                        bottom: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 50%;
+                        background: $black;
+                        background: linear-gradient(0deg, transparentize($black, 0) 0%, transparentize($black, 1) 100%);
+                        opacity: .5;
+                    }
+
+                    img {
+                        z-index: 0;
+                    }
+
+                    h3 {
+                        position: relative;
+                        z-index: 2;
+                    }
+
+                    p {
+                        position: relative;
+                        z-index: 2;
+                    }
+                }
+            }
         }
 
         #testimonials {
