--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'modules/fs-menu';
 @import 'modules/footer';
 @import 'modules/popups';
+@import 'modules/navigation';
 
 // pages
 @import 'pages/home';
