--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -5,7 +5,55 @@
         }
 
         #about {
+            border-radius: 1rem;
+            background-color: $blue;
+            margin-bottom: clamp(2rem, 10vw, 10rem);
+            color: $white;
+            
+            @media #{$mq-sm-min} {
+                border-radius: 0;
+                background-color: transparent;
+            }
+        
+            .blue-box {
+                display: block;
+                color: $white;
+                padding: 3rem 1rem;
+        
+                @media #{$mq-sm-min} {
+                    border-radius: clamp(1rem , 2vw, 2rem);
+                    border-top-left-radius: 0;
+                    background-color: $blue;
+                    padding: 4rem;
+                }
 
+                h2 {
+                    text-transform: lowercase;
+                    display: block;
+                    margin-bottom: clamp(1.5rem, 5vw, 5rem);
+
+                    @media #{$mq-md-min} {
+                        width: 85%;
+                    }
+
+                    @media #{$mq-lg-min} {
+                        width: 75%;
+                    }
+
+                    @media #{$mq-xl-min} {
+                        width: 50%;
+                    }
+                }
+
+                p {
+                    margin-bottom: 1.5rem;
+
+                    @media #{$mq-md-min} {
+                        margin-bottom: 0;
+                        padding-right: 1rem;
+                    }
+                }
+            }
         }
 
         #cards {
@@ -13,6 +61,10 @@
         }
 
         #services {
+            
+        }
+
+        #directions {
             height: 100vh;
         }
 
@@ -49,104 +101,6 @@
 
                     .desc {
                         
-                    }
-                }
-
-                .team-nav {
-                    display: flex;
-                    align-items: center;
-                    gap: .375rem;
-                    margin-top: 1.25rem;
-                    margin-left: -.25rem;
-
-                    @media #{$mq-sm-min} {
-                        justify-content: flex-end;
-                        gap: .5rem;
-                        margin: 0;
-                    }
-
-                    .button {
-                        display: block;
-                        width: 2.5rem;
-                        height: 2.5rem;
-                        border-radius: 50%;
-                        background-color: $green;
-                        color: $white;
-                        transition: .3s ease-in-out;
-                        cursor: pointer;
-                        position: relative;
-                        overflow: hidden;
-
-                        @media #{$mq-sm-min} {
-                            width: 3rem;
-                            height: 3rem;
-                        }
-
-                        &:hover {
-                            background-color: darken($green, 20);
-                        }
-
-                        &.prev {
-                            &:hover {
-                                svg {
-                                    &:first-child {
-                                        transform: translate(-500%, -50%);
-                                    }
-
-                                    &:last-child {
-                                        transform: translate(-50%, -50%);
-                                    }
-                                }
-                            }
-
-                            svg {
-                                &:last-child {
-                                    transform: translate(500%, -50%);
-                                }
-                            }
-                        }
-
-                        &.next {
-                            &:hover {
-                                svg {
-                                    &:first-child {
-                                        transform: translate(500%, -50%);
-                                    }
-
-                                    &:last-child {
-                                        transform: translate(-50%, -50%);
-                                    }
-                                }
-                            }
-
-                            svg {
-                                &:last-child {
-                                    transform: translate(-500%, -50%);
-                                }
-                            }
-                        }
-
-                        &.swiper-button-disabled {
-                            cursor: auto;
-                            pointer-events: none;
-                            filter: grayscale(1);
-                            opacity: .5;
-                        }
-
-                        svg {
-                            position: absolute;
-                            top: 50%;
-                            left: 50%;
-                            transform: translate(-50%, -50%);
-                            transition: .5s ease-in-out;
-                            width: 1rem;
-                            height: 1rem;
-
-                            @media #{$mq-sm-min} {
-                                width: 1.125rem;
-                                height: 1.125rem;
-                            }
-                        }
                     }
                 }
             }
@@ -253,104 +207,6 @@
 
                     h2 {
                         text-transform: lowercase;
-                    }
-
-                    .testimonials-nav {
-                        display: flex;
-                        align-items: center;
-                        gap: .375rem;
-                        margin-top: 1.25rem;
-                        margin-left: -.25rem;
-
-                        @media #{$mq-sm-min} {
-                            justify-content: flex-end;
-                            gap: .5rem;
-                            margin: 0;
-                        }
-
-                        .button {
-                            display: block;
-                            width: 2.5rem;
-                            height: 2.5rem;
-                            border-radius: 50%;
-                            background-color: $green;
-                            color: $white;
-                            transition: .3s ease-in-out;
-                            cursor: pointer;
-                            position: relative;
-                            overflow: hidden;
-
-                            @media #{$mq-sm-min} {
-                                width: 3rem;
-                                height: 3rem;
-                            }
-
-                            &:hover {
-                                background-color: darken($green, 20);
-                            }
-
-                            &.prev {
-                                &:hover {
-                                    svg {
-                                        &:first-child {
-                                            transform: translate(-500%, -50%);
-                                        }
-
-                                        &:last-child {
-                                            transform: translate(-50%, -50%);
-                                        }
-                                    }
-                                }
-
-                                svg {
-                                    &:last-child {
-                                        transform: translate(500%, -50%);
-                                    }
-                                }
-                            }
-
-                            &.next {
-                                &:hover {
-                                    svg {
-                                        &:first-child {
-                                            transform: translate(500%, -50%);
-                                        }
-
-                                        &:last-child {
-                                            transform: translate(-50%, -50%);
-                                        }
-                                    }
-                                }
-
-                                svg {
-                                    &:last-child {
-                                        transform: translate(-500%, -50%);
-                                    }
-                                }
-                            }
-
-                            &.swiper-button-disabled {
-                                cursor: auto;
-                                pointer-events: none;
-                                filter: grayscale(1);
-                                opacity: .5;
-                            }
-
-                            svg {
-                                position: absolute;
-                                top: 50%;
-                                left: 50%;
-                                transform: translate(-50%, -50%);
-                                transition: .5s ease-in-out;
-                                width: 1rem;
-                                height: 1rem;
-
-                                @media #{$mq-sm-min} {
-                                    width: 1.125rem;
-                                    height: 1.125rem;
-                                }
-                            }
-                        }
                     }
                 }
 
