--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -1,7 +1,7 @@
 #main-content {
     &.home {
         #banner {
-
+            height: 100vh;
         }
 
         #about {
@@ -57,7 +57,150 @@
         }
 
         #cards {
+            margin-bottom: clamp(2rem, 10vw, 10rem);
+            overflow: visible;
 
+            .top {
+                margin-bottom: clamp(2rem, 3vw, 3rem);
+
+                @media #{$mq-sm-min} {
+                    display: none;
+                }
+
+                @media #{$mq-sm-max} {
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+
+                .left {
+                    h2 {
+                        text-transform: lowercase;
+                    }
+                }
+            }
+
+            .cards-slider {
+                cursor: grab;
+
+                @media #{$mq-lg-min} {
+                    cursor: auto;
+                }
+
+                @media #{$mq-sm-max} {
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+
+                &.is-dragging {
+                    cursor: grabbing;
+
+                    @media #{$mq-lg-min} {
+                        cursor: auto;
+                    }
+
+                    .box {
+                        transform: scale(.9);
+
+                        @media #{$mq-lg-min} {
+                            transform: none;
+                        }
+                    }
+                }
+
+                .swiper-wrapper {
+                    @media #{$mq-lg-min} {
+                        flex-wrap: wrap;
+                        height: auto;
+                        gap: 1rem;
+                        justify-content: space-between;
+                    }
+
+                    .swiper-slide {
+                        @media #{$mq-lg-min} {
+                            width: calc(100% / 5 - 1rem);
+                        }
+
+                        &:first-child {
+                            display: none;
+
+                            @media #{$mq-sm-min} {
+                                display: block;
+                            }
+
+                            .box {
+                                text-align: left;
+                                box-shadow: inset 0 0 0 1px $gray-lightest;
+                                padding: 2rem;
+
+                                .floating-text {
+                                    box-shadow: inset 0 0 0 1px $gray-light;
+                                    color: $gray-light;
+                                    background-color: transparent;
+                                    backdrop-filter: none;
+                                }
+
+                                .title {
+                                    color: $gray-light;
+                                    font-size: 2rem;
+                                    line-height: 1.1;
+                                    text-transform: lowercase;
+
+                                    @media #{$mq-lg-min} {
+                                        font-size: clamp(1rem, 2vw, 2rem);
+                                    }
+                                }
+                            }
+                        }
+
+                        .box {
+                            position: relative;
+                            overflow: hidden;
+                            border-radius: clamp(.625rem, 1.5vw, 1.5rem);
+                            width: 100%;
+                            height: 60vh;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            transition: .6s ease-in-out;
+                            padding: 2rem 1.5rem;
+                            color: $white;
+                            text-align: center;
+                            gap: .5rem;
+        
+                            @media #{$mq-lg-min} {
+                                height: 55vh;
+                                border-radius: .625rem;
+                            }
+
+                            &:hover {
+                                img {
+                                    @media #{$mq-lg-min} {
+                                        transform: scale(1.075);
+                                    }
+                                }
+                            }
+
+                            .floating-text {
+                                position: absolute;
+                                z-index: 2;
+                                top: 1rem;
+                                left: 1rem;
+                                display: inline-block;
+                                padding: .25rem 1.5rem;
+                                backdrop-filter: blur(1rem);
+                                color: $white;
+                                text-transform: lowercase;
+                                border-radius: 3rem;
+                                background-color: transparentize($gray-light, .5);
+                            }
+
+                            img {
+                                transition: 1s ease-in-out;
+                            }
+                        }
+                    }
+                }
+            }
         }
 
         #services {
