--- a/assets/scss/modules/fs-menu.scss
+++ b/assets/scss/modules/fs-menu.scss
@@ -1,3 +1,66 @@
 #fs-menu {
-    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 98;
+    margin: auto;
+    transform: translateY(-125%);
+    transition: 1s ease-in-out;
+    overflow: visible;
+    background-color: $blue;
+    color: $white;
+
+    .col-12 {
+        overflow-y: scroll;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        height: 100svh;
+        justify-content: space-between;
+        padding-top: 8rem;
+        padding-bottom: 3rem;
+        gap: 4rem;
+
+        .menu {
+            li {
+                a {
+                    display: block;
+                    text-transform: lowercase;
+                    font-size: 12vw;
+                    line-height: 20vw;
+                    font-weight: $light;
+
+                    @media #{$mq-sm-min} {
+                        line-height: 1.1;
+                    }
+                }
+            }
+        }
+
+        .social {
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
+
+            a {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 1.25rem;
+                height: 1.25rem;
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+        }
+    }
+}
+
+body.fs-menu-open {
+    #fs-menu {
+        transform: none;
+    }
 }
