--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,6 @@
 // global css files used in pretty much all pages
 @import 'atoms/variables';
-@import 'atoms/breakpoints';
+//@import 'atoms/breakpoints';
 @import 'atoms/scroll';
 @import 'atoms/containers';
 @import 'atoms/texts';
