--- a/assets/scss/atoms/form.scss
+++ b/assets/scss/atoms/form.scss
@@ -46,7 +46,7 @@
             border: none;
             border-bottom: 1px solid $gray-light;
             box-shadow: none;
-            padding: .75rem 0;
+            padding: .875rem 0 .35rem 0;
 
             &.textarea {
                 min-height: 9rem;
