--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 // modules
 @import 'modules/top-menu';
 @import 'modules/fs-menu';
+@import 'modules/floating-whatsapp';
 @import 'modules/footer';
 @import 'modules/popups';
 @import 'modules/navigation';
