--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -2,10 +2,11 @@
     &.home {
         #banner {
             padding-top: 4.75rem;
-            margin-bottom: clamp(2rem, 3vw, 3rem);
+            margin-bottom: 2rem;
 
             @media #{$mq-sm-min} {
                 padding-top: 5.5rem;
+                margin-bottom: 1.5rem;
             }
 
             .col-12 {
@@ -27,12 +28,12 @@
                             border-radius: clamp(1rem , 2vw, 2rem);
 
                             @media #{$mq-sm-min} {
-                                border-bottom-left-radius: 0;
+                                border-top-right-radius: 0;
                                 height: 60vw;
                             }
 
                             @media #{$mq-lg-min} {
-                                height: 40vw;
+                                height: 35vw;
                             }
 
                             &:before {
@@ -73,10 +74,11 @@
                     }
 
                     span {
+                        --progress: 0;
                         position: absolute;
                         top: 0;
                         left: 0;
-                        width: 0;
+                        width: calc(100% * var(--progress));
                         height: 100%;
                         background-color: $white;
                     }
@@ -244,7 +246,7 @@
 
                             .box {
                                 text-align: left;
-                                box-shadow: inset 0 0 0 1px $gray-lightest;
+                                box-shadow: inset 0 0 0 1px lighten($gray-lighter, 10);
                                 padding: 2rem;
 
                                 .floating-text {
@@ -284,7 +286,6 @@
         
                             @media #{$mq-lg-min} {
                                 height: 55vh;
-                                border-radius: .625rem;
                             }
 
                             &:hover {
@@ -440,12 +441,22 @@
                 p {
                     position: absolute;
                     z-index: 2;
-                    top: 50%;
+                    top: 30%;
                     left: 50%;
                     transform: translate(-50%, -50%);
                     text-align: center;
                     color: $white;
-                    opacity: 0;
+                    backdrop-filter: blur(1rem);
+                    padding: 1.25rem;
+                    background-color: transparentize($gray-light, .5);
+                    border-radius: 1rem;
+                    text-transform: lowercase;
+                    width: calc(100% - 3rem);
+
+                    @media #{$mq-sm-min} {
+                        padding: 2rem;
+                        width: auto;
+                    }
 
                     a {
                         color: $green;
