--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -29,6 +29,7 @@
 
                             @media #{$mq-sm-min} {
                                 border-top-right-radius: 0;
+                                border-bottom-right-radius: 0;
                                 height: 60vw;
                             }
 
@@ -441,19 +442,20 @@
                 p {
                     position: absolute;
                     z-index: 2;
-                    top: 30%;
+                    top: 20%;
                     left: 50%;
                     transform: translate(-50%, -50%);
                     text-align: center;
                     color: $white;
-                    backdrop-filter: blur(1rem);
+                    //backdrop-filter: blur(1rem);
                     padding: 1.25rem;
-                    background-color: transparentize($gray-light, .5);
+                    //background-color: transparentize($gray-light, .5);
                     border-radius: 1rem;
                     text-transform: lowercase;
                     width: calc(100% - 3rem);
 
                     @media #{$mq-sm-min} {
+                        top: 17.5%;
                         padding: 2rem;
                         width: auto;
                     }
