--- a/assets/scss/modules/footer.scss
+++ b/assets/scss/modules/footer.scss
@@ -161,6 +161,15 @@
             }
 
             .right {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+
+                @media #{$mq-lg-min} {
+                    align-items: flex-end;
+                    gap: clamp(.75rem, 2vw, 2rem);
+                }
+
                 .logo {
                     display: flex;
                     width: clamp(10rem, 15vw, 15rem);
@@ -182,6 +191,10 @@
                     svg {
                         width: 100%;
                     }
+                }
+
+                .sliding-link {
+                    text-transform: lowercase;
                 }
             }
         }
