--- a/assets/scss/modules/top-menu.scss
+++ b/assets/scss/modules/top-menu.scss
@@ -8,7 +8,8 @@
     transform: translateY(-125%);
     transition: 1s ease-in-out;
     overflow: visible;
-    background-color: $white;
+    background-color: transparentize($white, .25);
+    backdrop-filter: blur(.5rem);
     padding: 1.25rem 0;
 
     &.fixed {
